[workspace.package]
description = "todo"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
authors = ["Brian Anderson <andersrb@gmail.com>"]
documentation = "todo"
edition = "2021"

[workspace]
resolver = "2"

members = [
  "crates/*",
]

default-members = [
  "crates/soroban-risc0-cli",
]

[workspace.dependencies]
rx.path = "../rustx/crates/rustx"
rx.package = "rustx"
rx.features = [
  "rx-profile-std",
  "rx-profile-cli",
  "rx-feature-derive",
]
risc0-zkvm.version = "0.18.0"
risc0-zkvm.default-features = false
soroban-sdk.version = "0.9.2"
